2002-12-07  Alan W. Irwin <irwin@beluga.phys.uvic.ca>

	* drivers/Makefile.am: Make tk and tkwin static drivers work. This
	  completes the static drivers configuration.

2002-12-06  Alan W. Irwin <irwin@beluga.phys.uvic.ca>

        * Configure test executables in examples for c++, f77, and tk.  make
	  check builds the uninstalled c, c++, f77, and tk examples fine,
	  and plplot-test.sh works with these uninstalled examples with some
	  limitations that are discussed on list.

	* Make all static drivers (except for tk and tkwin whose
	  implementation will be more complicated) work using the automake
	  convenience library approach.

2002-12-05  Alan W. Irwin <irwin@beluga.phys.uvic.ca>

	* Configure test executables in examples/c/Makefile.am
	
	* Clean up Makefile.am files and also switch from LIBADD to LDFLAGS
	  for interlibrary dependencies as suggested by documentation.
	  
	* Change fortran and C++ driver names to libplplotf77 and libplplotcxx
	  because of name-clash concerns.

2002-12-04  Alan W. Irwin <irwin@beluga.phys.uvic.ca>

	* Begin configuration of octave using autotools.  plplot_octave.oct
	  builds and installs, but no other part of octave is done yet.
	  Note this and all future autotools work is being done on the MAIN
	  branch.
	  
	* plplot_octave.oct build with Joao's recent gcc 3.2.x fix.

	* (mostly) finish configuration of octave using autotools.  Over
	  to Joao now to sort out why the installed p7.m and p15.m examples
	  don't work and why none of the x??.m examples work.


2002-12-03  Alan W. Irwin <irwin@beluga.phys.uvic.ca>

	* With a lot of work required to work around state problems in the
	  repository, merged the AT branch into MAIN.  Welcome to the world
	  of autotools configuration on our MAIN branch!

2002-12-02  Alan W. Irwin <irwin@beluga.phys.uvic.ca>

	* drivers/Makefile.am for AT branch: instead of using the
	  concatanation of all compiler flags for all dynamic drivers, apply